# cpp-cmake-example

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/arma/: 16BCN_1024samples_2048sync_4_9221Q_44100fs.mat  CMakeLists.txt  h52cpp.py  h5_complex_sandwich.hpp  load_groups.cc  main.cc  mat2h5.py  matrices.h5  save_load.cc
src/config/: CMakeLists.txt  config.cc  config.cpp  config.hpp
src/tests/: CMakeLists.txt  test_config.cc  test_factorial.cc
